--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>互联网医院医生端</title>
+    <title>互联网医院医生工作站</title>
   </head>
   <body>
     <noscript>
