Stle 修改标题, 增加不兼容提示, 美化样式

--- a/packages/repo-doctor/public/unCompatible.html
+++ b/packages/repo-doctor/public/unCompatible.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>系统不兼容</title>
-    <style>
-      .center {
-        text-align: center;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        width: 800px;
-        height: 400px;
-        margin-left: -400px;
-        margin-top: -200px;
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>请升级浏览器版本!!!</title>
+
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
       }
 
-      h5 {
-        color: #ff0000;
-        font-size: 16px;
+      html,
+      body {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        background-image: url('./static/images/bg.png');
+        background-repeat: no-repeat;
+        background-position: center;
+
+        overflow: hidden;
+      }
+
+      .block {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -130px;
+        margin-left: -330px;
+
+        width: 660px;
+        height: 260px;
+        background-image: url('./static/images/block.png');
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+
+      .tips {
+        padding: 161px 80px 0 80px;
+        text-align: left !important;
+      }
+
+      a {
+        color: #00c6ae;
       }
     </style>
-  </head>
 
-  <body>
     <script>
       function getExplore() {
         var sys = {},
@@ -56,30 +82,28 @@
 
       var explore = getExplore()
 
-      if (!(explore.explore === 'IE' && parseInt(explore.version) <= 11) && !(explore.explore === 'CHROME' && parseInt(explore.version) < 49)) {
-        window.location.href = './index.html'
+      if (
+        !(
+          (explore.explore === 'IE' && parseInt(explore.version) <= 11) ||
+          (explore.explore === 'CHROME' && parseInt(explore.version) < 49) ||
+          (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52) ||
+          (explore.explore === 'SAFARI' && parseInt(explore.version) < 11)
+        )
+      ) {
+        window.location.href = './'
       }
     </script>
+  </head>
 
-    <div class="center">
-      <h4>
-        检测到您目前正在使用低版本内核浏览器，系统不支持该版本的浏览器
-      </h4>
-      <h4>
-        如果您正使用
-        <span style="color: red"> 360 , QQ , 搜狗 , 猎豹 </span>
-        等双核浏览器,请切换 <span style="color: red">急速模式</span>
-      </h4>
-      <h4>
-        如果您没有安装现代浏览器, 建议您安装
-        <a href="https://www.google.cn/intl/zh-CN/chrome/">
-          谷歌浏览器
-        </a>
-        ,
-        <a href="http://www.firefox.com/">
-          火狐浏览器
-        </a>
-      </h4>
+  <body>
+    <div class="block">
+      <p class="tips" align="center">
+        温馨提示：为了保护功能的正常使用和良好体验，请使用<a href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank">谷歌浏览器</a>或<a
+          href="http://www.firefox.com.cn/"
+          target="_blank"
+          >火狐浏览器</a
+        >打开页面，即可正常登录。
+      </p>
     </div>
   </body>
 </html>
