--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -169,7 +169,13 @@
       }
 
       var explore = getExplore()
-      if ((explore.explore === 'IE' && parseInt(explore.version) <= 11) || (explore.explore === 'CHROME' && parseInt(explore.version) < 49)) {
+
+      if (
+        (explore.explore === 'IE' && parseInt(explore.version) <= 11) ||
+        (explore.explore === 'CHROME' && parseInt(explore.version) < 49) ||
+        (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52) ||
+        (explore.explore === 'SAFARI' && parseInt(explore.version) < 11)
+      ) {
         window.location.href = './unCompatible.html'
       }
     </script>
