Feature 更改 IM 引入方式

--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -179,6 +179,9 @@
         window.location.href = './unCompatible.html'
       }
     </script>
+
+    <script src="static/NIM_Web_SDK/NIM_Web_NIM_v6.3.0.js?t=<%= new Date().getTime() %>"></script>
+    <script src="static/NIM_Web_SDK/NIM_Web_WebRTC_v6.3.0.js?t=<%= new Date().getTime() %>"></script>
   </head>
 
   <body>
