--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <link rel="stylesheet" href="https://devpatient.hp.aijiayi.com/static/style/quill.snow.css">
+  <!-- <link rel="stylesheet" href="<%= BASE_URL %>static/style/quill.snow.css"> -->
   <title>loading...</title>
   <style>
     html,
