--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-  <link rel="stylesheet" href="https://devpatient.hp.aijiayi.com/static/style/quill.snow.css">
-  <!-- <link rel="stylesheet" href="<%= BASE_URL %>static/style/quill.snow.css"> -->
   <title>loading...</title>
   <style>
     html,
@@ -189,6 +187,16 @@
 </head>
 
 <body>
+  <script>
+    var head = document.getElementsByTagName('head')[0]
+    var link = document.createElement('link')
+    var url = 'https://devpatient.hp.aijiayi.com/static/style/quill.snow.css?t=' + new Date().getTime()
+
+    link.href = url
+    link.setAttribute('rel', 'stylesheet')
+
+    head.appendChild(link)
+  </script>
   <noscript>
     <strong> We're sorry but trunk doesn't work properly without JavaScript enabled. Please enable it to continue.
     </strong>
