Style 添加默认的 rel

--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -182,7 +182,7 @@
     <script src="static/IM/NIM_Web_NIM_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
     <script src="static/IM/NIM_Web_WebRTC_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
 
-    <link href="https://devpatient.hp.aijiayi.com/static/style/quill.snow.css?t=<%= new Date().getTime() %>"></link>
+    <link href="https://devpatient.hp.aijiayi.com/static/style/quill.snow.css?t=<%= new Date().getTime() %>" rel="stylesheet"></link>
   </head>
 
   <body>
