--- a/packages/repo-doctor/public/unCompatible.html
+++ b/packages/repo-doctor/public/unCompatible.html
@@ -86,8 +86,7 @@
         !(
           (explore.explore === 'IE' && parseInt(explore.version) <= 11) ||
           (explore.explore === 'CHROME' && parseInt(explore.version) < 49) ||
-          (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52) ||
-          (explore.explore === 'SAFARI' && parseInt(explore.version) < 11)
+          (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52)
         )
       ) {
         window.location.href = './'
