--- a/packages/repo-patient/public/index.html
+++ b/packages/repo-patient/public/index.html
@@ -186,12 +186,12 @@
         (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52) ||
         (explore.explore === 'SAFARI' && parseInt(explore.version) < 11)
       ) {
-        window.location.href = './unCompatible.html'
+        // window.location.href = './unCompatible.html'
       }
     </script>
 
-    <script src="static/IM/NIM_Web_NIM_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
-    <script src="static/IM/NIM_Web_WebRTC_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
+    <script src="/static/IM/NIM_Web_NIM_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
+    <script src="/static/IM/NIM_Web_WebRTC_v6.5.5.js?t=<%= new Date().getTime() %>"></script>
 <!--    <script type="text/javascript" src="https://map.qq.com/api/js?v=2.exp&amp;key=S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54"></script>-->
     <script type="text/javascript" src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js"></script>
   </head>
