修改路由跳转方式

--- a/packages/repo-patient/public/index.html
+++ b/packages/repo-patient/public/index.html
@@ -16,6 +16,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- 删除苹果默认的工具栏和菜单栏 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 启用 H5 拨打电话 -->
+    <meta name="format-detection" content="telephone=yes" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>loading...</title>
