--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -180,17 +180,13 @@
 
     <script src="static/IM/NIM_Web_NIM_v7.0.0.js?t=<%= new Date().getTime() %>"></script>
     <script src="static/IM/NIM_Web_WebRTC_v7.0.0.js?t=<%= new Date().getTime() %>"></script>
-    <link
-      href="https://devpatient.hp.aijiayi.com/static/style/quill.snow.css?t=<%= new Date().getTime() %>"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.bootcss.com/quill/2.0.0-dev.3/quill.snow.css" rel="stylesheet" />
   </head>
 
   <body>
     <noscript>
       <strong>
-        We're sorry but trunk doesn't work properly without JavaScript enabled. Please enable it to
-        continue.
+        We're sorry but trunk doesn't work properly without JavaScript enabled. Please enable it to continue.
       </strong>
     </noscript>
     <div id="app">
