Set default title && Change env

--- a/packages/repo-hybrid/public/index.html
+++ b/packages/repo-hybrid/public/index.html
@@ -21,7 +21,8 @@
   -->
   <!-- End -->
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+  <title></title>
 </head>
 
 <body>
