--- a/packages/repo-organization/public/index.html
+++ b/packages/repo-organization/public/index.html
@@ -9,6 +9,9 @@
 
   <!-- CDN -->
   <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">
+  <link href="//at.alicdn.com/t/font_1945938_f5is8rr9u9.css" rel="stylesheet">
+
+
   <script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
   <script src="https://cdn.bootcss.com/element-ui/2.13.1/index.js"></script>
   <!-- End -->
