--- a/packages/repo-operation/public/index.html
+++ b/packages/repo-operation/public/index.html
@@ -11,6 +11,8 @@
   <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
   <script src="https://cdn.bootcss.com/element-ui/2.13.1/index.js"></script>
+  <link href="//at.alicdn.com/t/font_1924446_kp36uxci0o.css" rel="stylesheet">
+
   <!-- End -->
 
   <!-- Local File -->
