--- a/packages/repo-website/public/index.html
+++ b/packages/repo-website/public/index.html
@@ -18,7 +18,7 @@
   <!-- Local File -->
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet"> -->
 
   <!-- Vendor CSS Files -->
   <link href="<%= process.env.NODE_ENV === 'production' ? process.env.VUE_APP_RELEASE_FLODER_PATH : '/' %>vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
