--- a/packages/repo-doctor/public/unCompatible.html
+++ b/packages/repo-doctor/public/unCompatible.html
@@ -1,74 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>请升级浏览器版本!!!</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>请升级浏览器版本!!!</title>
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-  <style type="text/css">
-    * {
-      margin: 0;
-      padding: 0;
-    }
+      a {
+        color: #00c6ae;
+      }
+    </style>
 
-    a {
-      color: #00c6ae;
-    }
-  </style>
-
-  <script>
-    function getExplore() {
-      var sys = {},
-        ua = navigator.userAgent.toLowerCase(),
-        s
-        ; (s = ua.match(/rv:([\d.]+)\) like gecko/))
+    <script>
+      function getExplore() {
+        var sys = {},
+          ua = navigator.userAgent.toLowerCase(),
+          s
+        ;(s = ua.match(/rv:([\d.]+)\) like gecko/))
           ? (sys.ie = s[1])
           : (s = ua.match(/msie ([\d\.]+)/))
-            ? (sys.ie = s[1])
-            : (s = ua.match(/edge\/([\d\.]+)/))
-              ? (sys.edge = s[1])
-              : (s = ua.match(/firefox\/([\d\.]+)/))
-                ? (sys.firefox = s[1])
-                : (s = ua.match(/(?:opera|opr).([\d\.]+)/))
-                  ? (sys.opera = s[1])
-                  : (s = ua.match(/chrome\/([\d\.]+)/))
-                    ? (sys.chrome = s[1])
-                    : (s = ua.match(/version\/([\d\.]+).*safari/))
-                      ? (sys.safari = s[1])
-                      : 0
+          ? (sys.ie = s[1])
+          : (s = ua.match(/edge\/([\d\.]+)/))
+          ? (sys.edge = s[1])
+          : (s = ua.match(/firefox\/([\d\.]+)/))
+          ? (sys.firefox = s[1])
+          : (s = ua.match(/(?:opera|opr).([\d\.]+)/))
+          ? (sys.opera = s[1])
+          : (s = ua.match(/chrome\/([\d\.]+)/))
+          ? (sys.chrome = s[1])
+          : (s = ua.match(/version\/([\d\.]+).*safari/))
+          ? (sys.safari = s[1])
+          : 0
 
-      // 根据关系进行判断
-      if (sys.ie) return { explore: 'IE', version: sys.ie }
-      if (sys.edge) return { explore: 'EDGE', version: sys.edge }
-      if (sys.firefox) return { explore: 'FIREFOX', version: sys.firefox }
-      if (sys.chrome) return { explore: 'CHROME', version: sys.chrome }
-      if (sys.opera) return { explore: 'OPERA', version: sys.opera }
-      if (sys.safari) return { explore: 'SAFARI', version: sys.safari }
-      return 'Unkonwn'
-    }
+        // 根据关系进行判断
+        if (sys.ie) return { explore: 'IE', version: sys.ie }
+        if (sys.edge) return { explore: 'EDGE', version: sys.edge }
+        if (sys.firefox) return { explore: 'FIREFOX', version: sys.firefox }
+        if (sys.chrome) return { explore: 'CHROME', version: sys.chrome }
+        if (sys.opera) return { explore: 'OPERA', version: sys.opera }
+        if (sys.safari) return { explore: 'SAFARI', version: sys.safari }
+        return 'Unkonwn'
+      }
 
-    var explore = getExplore()
+      var explore = getExplore()
 
-    if (
-      !(
-        (explore.explore === 'IE' && parseInt(explore.version) <= 11) ||
-        (explore.explore === 'CHROME' && parseInt(explore.version) < 49) ||
-        (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52)
-      )
-    ) {
-      window.location.href = './'
-    }
-  </script>
-</head>
+      if (
+        !(
+          (explore.explore === 'IE' && parseInt(explore.version) <= 11) ||
+          (explore.explore === 'CHROME' && parseInt(explore.version) < 49) ||
+          (explore.explore === 'FIREFOX' && parseInt(explore.version) < 52)
+        )
+      ) {
+        window.location.href = './'
+      }
+    </script>
+  </head>
 
-<body>
-  <div style="padding-top: 10%; width: 400px; margin: 0 auto;">
-    <p style="font-size: 18px; margin-bottom: 10px;">温馨提示：</p>
-    <p>为了保护功能的正常使用和良好体验
-    <p>请使用最新版本<a href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank">谷歌浏览器</a>打开页面，即可正常登录。</p>
-  </div>
-</body>
-
+  <body>
+    <div style="padding-top: 10%; width: 400px; margin: 0 auto;">
+      <p style="font-size: 18px; margin-bottom: 10px;">温馨提示：</p>
+      <p>为了保护功能的正常使用和良好体验</p>
+      <p>请使用最新版本<a href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank">谷歌浏览器</a>打开页面，即可正常登录。</p>
+    </div>
+  </body>
 </html>
