--- a/packages/repo-organization/public/index.html
+++ b/packages/repo-organization/public/index.html
@@ -10,10 +10,6 @@
   <!-- CDN -->
   <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">
   <link href="//at.alicdn.com/t/font_1924446_azigrg1rd7p.css" rel="stylesheet">
-
-
-  <script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
-  <script src="https://cdn.bootcss.com/element-ui/2.13.1/index.js"></script>
   <!-- End -->
 
   <!-- Local File -->
@@ -34,6 +30,13 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
+  <!-- CDN -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.0.6/vue-router.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.min.js"></script>
+  <!-- End -->
 </body>
 
 </html>
