--- a/packages/repo-doctor/public/index.html
+++ b/packages/repo-doctor/public/index.html
@@ -208,10 +208,10 @@
   </div>
 
   <!-- built files will be auto injected -->
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.1.3/vue-router.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
   <script src="<%= process.env.NODE_ENV === 'production' ? process.env.VUE_APP_RELEASE_FLODER_PATH : '/' %>static/js/IM/NIM_Web_NIM_v7.0.0.js"></script>
   <script src="<%= process.env.NODE_ENV === 'production' ? process.env.VUE_APP_RELEASE_FLODER_PATH : '/' %>static/js/IM/NIM_Web_WebRTC_v7.0.0.js"></script>
 </body>
