--- a/packages/repo-pharmacist/public/index.html
+++ b/packages/repo-pharmacist/public/index.html
@@ -16,14 +16,10 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-
-  <!-- CDN -->
-  <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet" />
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.1.3/vue-router.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.min.js"></script>
-  <!-- End -->
+  <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+  <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
 </body>
 
 </html>
