--- a/packages/repo-hybrid/public/index.html
+++ b/packages/repo-hybrid/public/index.html
@@ -7,21 +7,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-  <!-- CDN -->
-  <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
-  <script src="https://cdn.bootcss.com/element-ui/2.13.1/index.js"></script>
-  <!-- End -->
-
-  <!-- Local File -->
-  <!-- 
-  IM 相关
-  <script src="<%= process.env.NODE_ENV === 'production' ? process.env.VUE_APP_RELEASE_FLODER_PATH : '/' %>static/IM/NIM_Web_NIM_v7.0.0.js?t=<%= new Date().getTime() %>"></script>
-  <script src="<%= process.env.NODE_ENV === 'production' ? process.env.VUE_APP_RELEASE_FLODER_PATH : '/' %>static/IM/NIM_Web_WebRTC_v7.0.0.js?t=<%= new Date().getTime() %>"></script> 
-  -->
-  <!-- End -->
-
-  <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
   <title></title>
 </head>
 
@@ -31,6 +16,22 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
+  <!-- 开发环境 -->
+  <% if (process.env.NODE_ENV==='development' ) { %>
+    <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.js"></script>
+    <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+    <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+    <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
+    <% } %>
+
+      <!-- 生产环境 -->
+      <% if (process.env.NODE_ENV==='production' ) { %>
+        <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
+        <% } %>
 </body>
 
 </html>
