--- a/packages/repo-organization/public/index.html
+++ b/packages/repo-organization/public/index.html
@@ -32,11 +32,22 @@
   <!-- built files will be auto injected -->
 
   <!-- CDN -->
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.1.3/vue-router.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.min.js"></script>
-  <!-- End -->
+  <!-- 开发环境 -->
+  <% if (process.env.NODE_ENV==='development' ) { %>
+    <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.js"></script>
+    <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+    <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+    <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
+    <% } %>
+
+      <!-- 生产环境 -->
+      <% if (process.env.NODE_ENV==='production' ) { %>
+        <script src="https://static.holoalpha.com/libs/vue/2.6.12/vue.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/vuex/3.1.2/vuex.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/vue-router/3.1.3/vue-router.min.js"></script>
+        <script src="https://static.holoalpha.com/libs/element-ui/2.15.0/index.js"></script>
+        <% } %>
+          <!-- End -->
 </body>
 
 </html>
